--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
               <a chref="https://frogagent.com/podcast/">ポッドキャスト</a>
             </div>
           </div>
-          <div class="contents text-center">
+          <div class="contents">
             <h2>Web制作＋英語 短期集中コース</h2>
-            <p>カナダ・バンクーバーでWeb制作と英語を身に着けよう！<br>Web制作も英語も勉強できる欲張りコースの登場です。</p>
+            <p>カナダ・バンクーバーでWeb制作と英語を身に着けよう！Web制作も英語も勉強できる欲張りコースの登場です。</p>
             <h4>次回開催予定についてはお問い合わせください</h4>
             <a href="http://school.frogagent.com/#application-form" class="btn_square">お申し込み</a>
           </div>
@@ -57,7 +57,7 @@
           <div class="col-12 text-center">
             <h2>コース概要</h2>
           </div>
-          <div class="col-12 text-center">
+          <div class="col-12">
             <p>
               『英語とWeb制作を同時に学びたい！』<br>
               カナダ人講師による英会話講座に加え、海外で活動してきた現役の日系クリエイターが、<br>
@@ -147,10 +147,8 @@
               </div>
             </div>
           </div><!-- div.curriculum_descs -->
-        </div><!-- div.row curriculum -->
 
-        <!-- コース内容 -->
-        <div class="row course">
+          <!-- コース内容 -->
           <div class="course_details">
             <div class="course_detail">
               <p><b>コース内容</b></p>
@@ -184,9 +182,7 @@
               </table>
             </div>
           </div>
-        </div><!-- div.row course -->
 
-        <div class="row schedule">
           <!-- 2週間のスケジュール -->
           <div class="schedule_details">
             <div class="schedule_detail">
@@ -234,19 +230,21 @@
               <p>※開催日程は8月6日〜19日、及び8月20日〜9月2日のいずれかよりお選びいただけます。</p>
             </div><!-- div.schedule_detail -->
           </div>
-        </div>
+        </div><!-- div.row curriculum -->
 
         <div class="row en_course">
           <!-- 英会話講座 -->
           <div class="col-12 text-center">
             <h4>英会話講座</h4>
           </div>
-          <div class="en_course_desc">
-            <img src="src/eh-plus.png" alt="">
-            <div class="en_course_text"> <!-- 中央寄せのためのセレクタ -->
-              <p>英会話は効果的な英語の学習方法を追求して生まれたカンバセーションスクール「Eh+」にて英会話を勉強します。すべての授業予約、ノートテイク、課題、自主学習等はすべてオンラインで行えます。「Conversation（会話）」「Listening（聞き取り）」「Vocabulary（語彙）」「Pronunciation（発音）」にわかれたクラスを自分でオンラインから予約して受講できるので、一般のカンバセーションとは違い、自分の弱い部分を集中して克服できます。 また、すべてのクラスにおいて、その日のノートや単語集、課題、自主学習用のリソース等も自身のオンラインアカウントに蓄積されていくため、独学でもさらに学習を深めていけるでしょう。</p>
-            </div>
-          </div><!-- div.en_course_desc -->
+            <div class="en_course_desc">
+              <div class="en_course_img">
+                <img src="src/eh-plus.png" alt="">
+              </div>
+              <div class="en_course_text"> 
+                <p>英会話は効果的な英語の学習方法を追求して生まれたカンバセーションスクール「Eh+」にて英会話を勉強します。すべての授業予約、ノートテイク、課題、自主学習等はすべてオンラインで行えます。「Conversation（会話）」「Listening（聞き取り）」「Vocabulary（語彙）」「Pronunciation（発音）」にわかれたクラスを自分でオンラインから予約して受講できるので、一般のカンバセーションとは違い、自分の弱い部分を集中して克服できます。 また、すべてのクラスにおいて、その日のノートや単語集、課題、自主学習用のリソース等も自身のオンラインアカウントに蓄積されていくため、独学でもさらに学習を深めていけるでしょう。</p>
+              </div>
+            </div><!-- div.en_course_desc -->
         </div><!-- div.row en_course -->
       </div>
 
@@ -254,7 +252,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 find_yourself">
-            <div class="find_yourself_txt text-center">
+            <div class="find_yourself_txt">
               <h2>バンクーバーで見つける、新しい自分。</h2>
               <a href="http://school.frogagent.com/#application-form" class="btn_square">お申し込み</a>
             </div>
@@ -285,6 +283,7 @@
           <div class="experiences_desc col-12">
             <div class="experiences_img">
               <img src="src/taka.jpg" alt="">
+              <p>Takaさん</p>
             </div>
             <div class="experiences_text"> <!-- 中央寄せのためのセレクタ -->
               <p>今回の短期プランの間は初めてのことばっかりでした。バンクーバーの街は自然が多く綺麗で、いい人が多くて初海外でも問題なく過ごせました。Webの授業はカリキュラムがしっかりしていて、身に付いたと思います。</p>
@@ -297,6 +296,7 @@
           <div class="experiences_desc col-12">
             <div class="experiences_img">
               <img src="src/kagawa_icn.png" alt="">
+              <p>Sayakaさん</p>
             </div>
             <div class="experiences_text"> <!-- 中央寄せのためのセレクタ -->
               <p>Webについて<br>
@@ -310,6 +310,7 @@
           <div class="experiences_desc col-12">
             <div class="experiences_img">
               <img src="src/aoi.jpg" alt="">
+              <p>Aoiさん</p>   
             </div>
             <div class="experiences_text"> <!-- 中央寄せのためのセレクタ -->
               <p>期待通りの充実したプログラムでした。webデザインは初心者で、ついていくのが精一杯でしたが、html/photoshop/phpなど、短期間で様々な言語やツールに触れることができたので、webデザインにおいてどんなことを勉強していくのか概要が掴めたのが良かったです。また、質問した際にはマンツーマンの形で対応していただけるので安心感がありました。<br>
@@ -322,6 +323,7 @@
           <div class="experiences_desc col-12">
             <div class="experiences_img">
               <img src="src/kaori.jpg" alt="">
+              <p>Kaoriさん</p>
             </div>
             <div class="experiences_text"> <!-- 中央寄せのためのセレクタ -->
               <p>業界未経験の私にとっては一部ついていけない所もあり少しレベルが高いと感じました。<br>
@@ -335,6 +337,7 @@
           <div class="experiences_desc col-12">
             <div class="experiences_img">
               <img src="src/konomi.jpg" alt="">
+              <p>コノミさん</p>
             </div>
             <div class="experiences_text"> <!-- 中央寄せのためのセレクタ -->
               <p>少しでもWeb制作の裏側を理解して発注側からも攻めるWebコンテンツ作りができるようになれればと思い参加しました。それぞれの言語の役割や機能、考え方や関係性などを丁寧にかみ砕いて理解できるまで教えてもらえたので、今まで独学で行き詰まっていたことが一連の制作過程を教わる中でやっと紐づけられたようでスッキリしました。特に後半の怒涛のWebツール紹介やWordPressについてはすぐ実践できそうな内容だったのでありがたかったです。</p>
@@ -366,21 +369,21 @@
             <p>常に第一線で活躍を続ける現役クリエイターからの最新技術が学べます</p>
           </div>
           <!-- Yoshitaka Senna Goto さん -->
-          <div class="teacher col-4">
+          <div class="teacher col-md-4">
             <img src="src/senna.jpg" alt="">
             <h4>Yoshitaka Senna Goto</h4>
             <p>印刷会社に勤務した後、Web業界へ転向。都内の制作会社勤務を経てバンクーバーへ留学。その後、バンクーバーのIT業界急成長に可能性を感じ、長期滞在を決意。現在は永住権を獲得し、フリーランス、起業、シェアハウス運営と、幅広く活動中。バンクーバー生活6年目。バンクーバーで始めたブログ「<a href="http://webya.opdsgn.com/">バンクーバーのうぇぶ屋</a>」は日本国内のWebデザイナー向けブログとして人気を博し、現在に至る。Web制作者歴は10年。</p>
           </div>
 
           <!-- Ryohei Oue(chan_gami) さん -->
-          <div class="teacher col-4">
+          <div class="teacher col-md-4">
             <img src="src/changami.jpg" alt="">
             <h4>Yoshitaka Senna Goto</h4>
             <p>Vancouverの専門学校ITD CanadaのGame Development Programを卒業し、現地企業でエンジニアとしての就職を経た後COS（Frog提携留学エージェント）へ入社。ITD在校時は未経験者に学校外でプログラミングを教えていた経験もあり、未経験者サポートの重要性の理解と、教え方には定評がある。現地就職者の多いFrog Memberからも技術力で一目置かれる存在。(<a href="https://twitter.com/chan_gami">Twitter</a>, <a href="https://www.changami.com/">Blog</a>)</p>
           </div>
 
           <!-- Hideto Yasunori さん -->
-          <div class="teacher col-4">
+          <div class="teacher col-md-4">
             <img src="src/hideto.jpg" alt="">
             <h4>Hideto Yasunori</h4>
             <p>IT業界未経験からVancouverに渡り、1年間の専門学校修了後に現地のソフトウェア系スタートアップ企業にエンジニアとして就職。現地就職希望者に向けた「ポートフォリオ講座」や「履歴書講座」を持つなど、未経験から現地就職を果たした視点でメンバーへのサポートを精力的に行っている。「Frogメンバーの健康は俺が守る！」を合言葉にパーソナルトレーナーとしても活動中。北米の滞在歴は計5年。 (<a href="https://twitter.com/VancouBoys">Twitter</a>, <a href="https://webdev-bodymake.com/">Blog</a>)</p>
@@ -552,9 +555,10 @@
       <!-- お申し込み／お問い合わせ -->
       <div class="container-fluid req_inq">
         <div class="row req_inq_box">
-          <div class="col-8 offset-2 text-center input_group">
+          <div class="input_group">
+          <!-- <div class="col-8 offset-2 text-center input_group"> -->
             <h2>お申し込み／お問い合わせ</h2>
-            <p>申し込みは以下のフォームをご入力いただき、送信ボタンを押してください。
+            <p>申し込みは以下のフォームをご入力いただき、送信ボタンを押してください。<br>
               お問い合わせもお待ちしております。</p>
             <form>
               <div class="form_group">
@@ -644,10 +648,11 @@
                 </select>
                 <p>※参加人数が一定に達さない場合、開催を見送らせて頂きます。</p>
               </div>
-              <div class="form_textarea">
+              <div class="form_group">
                 <label for="formGroupMassegeInput">メッセージ／ご質問</label>
-                <textarea name="formGroupMassegeInput" rows="8" cols="60" id="formGroupMassegeInput"></textarea>
+                <textarea name="formGroupMassegeInput" rows="8" cols="85" id="formGroupMassegeInput"></textarea>
               </div>
+              <input type="submit" value="送信" class="btn_square">
             </form>
           </div>
         </div>
