--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
               </div>
               <div class="form_group">
                 <label for="formGroupMassegeInput">メッセージ／ご質問</label>
-                <textarea name="formGroupMassegeInput" rows="8" cols="85" id="formGroupMassegeInput"></textarea>
+                <textarea name="formGroupMassegeInput"  class="form-control"  rows="8" cols="85" id="formGroupMassegeInput"></textarea>
               </div>
               <input type="submit" value="送信" class="btn_square">
             </form>
